gitops/overlays/olivier/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: 32k # required for OAuth proxy
  labels:
    app.kubernetes.io/name: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: cdcp-dev.olivier-dp.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
